<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="auto_select_device" translatable="false">auto_select_device</string>

    <string name="app_name">EasyLock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_info" translatable="false">Info</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_settings">Settings</string>
    <string name="toolbox_connect">Connect</string>
    <string name="toolbox_disconnect">Disconnect</string>

    <string name="text_password">Password:</string>
    <string name="text_new_password">New password:</string>
    <string name="text_change">Change password</string>
    <string name="text_password_hint">Password</string>
    <string name="text_new_password_hint">New Password for the selected device</string>

    <string name="bluetooth_permission_denied">Congratulations. You made this App useless</string>

    <string name="bluetooth_messages_1">Bluetooth® technology has to be activated for this app to work</string>
    <string name="bluetooth_messages_2">You still need Bluetooth for this app to function</string>
    <string name="bluetooth_messages_3">I just told you twice that you need Bluetooth</string>
    <string name="bluetooth_messages_4">Hey, a Bluetooth Lock doesn\'t work without Bluetooth</string>
    <string name="bluetooth_messages_5">What are you doing? Without Bluetooth nothing works in this app</string>
    <string name="bluetooth_messages_6">Did I mention that Bluetooth is required?</string>
    <string name="bluetooth_messages_7">If you don\'t want to use Bluetooth then take a cable and shove it up your ass </string>
    <string name="bluetooth_messages_8">Whatever god you believe in, he is disappointed</string>
    <string name="bluetooth_messages_9">Are you 6, 60, or mother\'s disappointment?</string>
    <string name="bluetooth_messages_10">Roses are red, violets are blue, I\'ve got 5 fingers, the middle one is for you</string>
    <string name="bluetooth_messages_11">*intense crying*</string>

    <string name="bluetooth_permission_message">No permission for the use of Bluetooth® technology found</string>

    <string name="bluetooth_device_message">No device selected</string>
    <string name="bluetooth_not_connected">No compatible device connected</string>

    <string name="connected">Connected with</string>
    <string name="not_connected_1">Connection with</string>
    <string name="not_connected_2">not possible</string>
    <string name="not_connected_not_responding">because the device didn\'t respond</string>

    <string name="error_data">Error. Too much data sent</string>
    <string name="pw_too_long">Password is too long. A maximum of 127 characters is allowed</string>
    <string name="new_pw_too_long">New password is too long. A maximum of 127 characters is allowed</string>
    <string name="wrong_password">Wrong password</string>
    <string name="device_disconnected">The Bluetooth® connection was interrupted</string>
    <string name="password_changed">Password changed</string>
    <string name="inactivity">Activity was canceled due to inactivity</string>

    <string name="info">1. Connect with device\n2. Setup of the lock\n3. Opening the lock\n4. Settings\n\n1. Connect to device\nOf course, to use the device, you need to connect to it first. To do this, go to Devices and select the device you want to connect to from the list of paired devices (usually HC-05). If the device is not paired yet, you have to do that first in the Bluetooth® settings. To connect to the selected device you just have to press the "Connect" button in the upper right corner.\n2. Setup of the lock\nConfiguring the lock involves setting the password and configuring the sensor that monitors the door status. \nTo set the password go to the settings and press "Change password". Now a window will open. Here you have to enter the old and the new password. To change the password, press the "Change password" button. If no password has been set before, press the button on the device while pressing the "Change password" button. If you followed these steps, the password of the device should be changed now.\nNext, you need to configure the door status sensor. For this you need to go to the settings again, but this time press "Configure open-close detection". Here you have to enter the password again (or press and hold the button on the device) and then press "Start configuration". Now you just have to follow the displayed instructions to finish the configuration.\n3. Opening the lock\nTo open the lock, you must first go to the start page of the app. Under "Password" you need to enter the password of the device. To open the lock, you just need to press the button with the lock icon. \nIf you don\'t have a smartphone with you, you can just press the button on the device for less than 0.5s.\n4. Settings\n"Configure open-close detection" - door status sensor will be reconfigured to make the lock lock again after the door is closed.\n"Change Password" - Password of the device will be changed.\n"Device selection after start" - After starting the app, a device will be selected automatically. Here you can set whether the last selected device should be automatically selected at the next start or its specific device. \n"Default device" - If a specific device should be selected at startup, this device can be selected here.\n"Automatic connection" - Whether the app should automatically connect to the device at startup.</string>

    <!-- Configuration -->
    <string name="start_configuration">Start configuration</string>
    <string name="configuration_message_1">Please close the door</string>
    <string name="configuration_message_2">Please open the door now</string>
    <string name="continue_config">Continue</string>
    <string name="finish_config">Finish</string>
    <string name="config_complete">Configuration complete</string>

    <!-- Preference Titles -->
    <string name="settings_title_device">Device</string>
    <string name="settings_title_start">Start</string>

    <!-- Device Preferences -->
    <string name="settings_device_change_password">Change password</string>
    <string name="settings_device_config_device">Configure Open-Close-Detection</string>

    <!-- Start Preferences -->
    <string name="settings_start_automatic_device">Device selection after start</string>
    <string name="settings_start_specific_bluetooth_device">Standard device</string>
    <string name="settings_start_last_device">The last chosen device</string>
    <string name="settings_start_specific_device">A specific device</string>
    <string name="settings_start_automatic_connection">Automatic connection</string>
    <string name="settings_start_automatic_connection_on">App connects automatically to the device</string>
    <string name="settings_start_automatic_connection_off">Nothing happens</string>

</resources>