<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foregroundTintMode="src_over">

    <PreferenceCategory app:title="@string/settings_title_device">

        <Preference
            app:key="settings_device_config_device"
            app:title="@string/settings_device_config_device" />

        <Preference
            app:key="settings_device_change_password"
            app:title="@string/settings_device_change_password" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_start">

        <ListPreference
            app:defaultValue="true"
            app:entries="@array/device_entries"
            app:entryValues="@array/device_values"
            app:key="settings_start_automatic_device"
            app:title="@string/settings_start_automatic_device"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/empty_entries"
            app:entryValues="@array/empty_values"
            app:key="settings_start_specific_bluetooth_device"
            app:title="@string/settings_start_specific_bluetooth_device"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="settings_start_automatic_connection"
            app:summaryOff="@string/settings_start_automatic_connection_off"
            app:summaryOn="@string/settings_start_automatic_connection_on"
            app:title="@string/settings_start_automatic_connection" />

    </PreferenceCategory>

</PreferenceScreen>