<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_terminal"
            android:icon="@drawable/terminal_icon_foreground"
            android:title="@string/menu_terminal" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/devices_icon_foreground"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon_foreground"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info_icon_foreground"
            android:title="@string/menu_info" />
    </group>

</menu>