<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hofmann.easylock.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.hofmann.easylock.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_terminal"
        android:name="com.hofmann.easylock.ui.terminal.TerminalFragment"
        android:label="@string/menu_terminal"
        tools:layout="@layout/fragment_terminal" />
    <fragment
        android:id="@+id/nav_devices"
        android:name="com.hofmann.easylock.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hofmann.easylock.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        />
</navigation>